--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                                                             <div class="col-md-8 col-sm-8 col-xs-12 no-padding">
                                                                 <h3 class="text-small margin-three-bottom font-weight-700">SOFTWARE</h3>
                                                                 <p class=" text-light-gray font-weight-200 clear-both no-padding-bottom no-margin-bottom">  
-                                                                Adobe Photoshop, Adobe Illustrator, Adobe Indesign, Figma, balsamiq, 
+                                                                Figma, Adobe Photoshop, Adobe Illustrator, Adobe Indesign, balsamiq, 
                                                                 Adobe Dreamweaver, Adobe Flash,
                                                                 Adobe premiere, Wondershare Filmora,
                                                                 Adobe After Effects.
@@ -1329,4 +1329,5 @@
 			});
 		</script>
     </body>
+
 </html>
