--- a/index.html
+++ b/index.html
@@ -310,9 +310,11 @@
                                                             <div class="vertical-medium-line bg-magenta xs-display-none"></div>
                                                             <div class="col-md-8 col-sm-8 col-xs-12 no-padding">
                                                                 <h3 class="text-small margin-three-bottom font-weight-700">QUALIFICATIONS</h3>
-                                                                <p class=" text-light-gray font-weight-200 clear-both no-padding-bottom no-margin-bottom">Service Design / Design Thinking
-                                                                UX / Interaction Design
-                                                                UI / Visual Design.</p>
+                                                                <p class=" text-light-gray font-weight-200 clear-both no-padding-bottom no-margin-bottom">
+																	Solid understanding of user-centered design principles, information architecture, and interaction design.
+																	Expertise in using Figma to create wireframes, prototypes, and design systems.
+																	Experience with user research methodologies,userjurney map, card short, usability testing, persona .
+                                                               </p>
                                                             </div>
                                                         </div>
                                                         <!-- end features item -->
@@ -1331,3 +1333,4 @@
     </body>
 
 </html>
+
