--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                                                                         <a class="work-details-popup"><img src="images/gallery-10.jpg" alt=""></a>
                                                                     </div>
                                                                     <figcaption>
-                                                                        <a class="work-details-popup"><h3 class="text-white"> Ruposhi Bangla Hotel<span class="text-white display-block">Web and Branding</span></h3></a>
+                                                                        <a class="work-details-popup"><h3 class="text-white"> Hearing Choices<span class="text-white display-block">Web and Branding</span></h3></a>
                                                                     </figcaption>
                                                                 </figure>
                                                                 <!-- details popup -->
@@ -664,7 +664,7 @@
                                                                         <div class="container-fluid margin-four-bottom xs-margin-seven-bottom">
                                                                             <div class="row">
                                                                                 <div class="col-md-8 col-sm-8 col-xs-12 popup-title col-md-offset-4 col-sm-offset-4 xs-text-center no-padding xs-padding-lr-15px">
-                                                                                    <h3 class="text-uppercase margin-three-bottom"> Ruposhi Bangla Hotel</h3>
+                                                                                    <h3 class="text-uppercase margin-three-bottom"> Hearing Choices</h3>
                                                                                     <div class="text-light-gray date"><span class="small-line bg-magenta"></span>Web and Branding</div>
                                                                                 </div>
                                                                             </div>
@@ -681,12 +681,12 @@
                                                                                 <div class="col-md-4 col-sm-12 col-xs-12 padding-four-right padding-seven-left md-padding-three-lr padding-two-bottom sm-no-padding-bottom">
                                                                                     <h4 class="margin-seven-bottom sm-margin-two-bottom">Description</h4>
                                                                                     <p class="text-light-gray  margin-eight-bottom sm-margin-five-bottom xs-margin-ten-bottom">
-                                                                                    As the world’s first international luxury hotel brand,  Ruposhi Bangla  Hotels & Resorts has been pioneering travel across the globe for more than 70 years. We’re proud to share both international know-how and local cultural wisdom with our guests at every one of our hotels — from historic buildings to city landmarks and immersive resorts.</p>
+                                                                                    Hearing Choices provides unrivaled service and expert advice – completely free and without obligation! We are an experienced team of hearing experts. Not only do we know the obstacles and challenges of hearing loss, ranging anywhere from mild to severe, but we are also able to provide you with every top hearing aid brand, available for all budgets.</p>
                                                                                     <table class="popup-table">
                                                                                         <tbody>
                                                                                             <tr>
                                                                                                 <td>Date:</td>
-                                                                                                <td class="font-weight-400">March 12th, 2014</td>
+                                                                                                <td class="font-weight-400">March 12th, 2021</td>
                                                                                             </tr>
                                                                                             <tr>
                                                                                                 <td>Technology:</td>
@@ -694,11 +694,11 @@
                                                                                             </tr>
                                                                                             <tr>
                                                                                                 <td>Industry:</td>
-                                                                                                <td class="font-weight-400"> HOTELS & RESORTS</td>
+                                                                                                <td class="font-weight-400"> WooCommerce</td>
                                                                                             </tr>
                                                                                         </tbody>
                                                                                     </table>
-                                                                                    <a  href="http://www.ruposhibanglahotel.com/" target="_blank" class="btn small-btn highlight-button-magenta margin-nine-top sm-margin-four-top">ruposhibanglahotel.com.<i class="fa fa-long-arrow-right text-white"></i></a>
+                                                                                    <a  href="https://www.hearingchoices.com.au/" target="_blank" class="btn small-btn highlight-button-magenta margin-nine-top sm-margin-four-top">hearingchoices.com.au<i class="fa fa-long-arrow-right text-white"></i></a>
                                                                                 </div>
                                                                                 <!-- end popup text -->
                                                                             </div>
@@ -707,22 +707,21 @@
                                                                             <div class="row">
                                                                                 <!-- popup images -->
                                                                                 <div class="col-md-4 col-sm-12 col-xs-12 no-padding">
-                                                                                    <img src="images/portfolio-ruposhibangla.jpg" alt="">
+                                                                                    <img src="images/portfollio-hearing.jpg" alt="">
                                                                                 </div>
                                                                                 <!-- end popup images -->
                                                                                 <!-- popup text -->
                                                                                 <div class="col-md-4 col-sm-6 col-xs-12 padding-five-lr vc-column border-right xs-no-border-right">
                                                                                     <blockquote class="margin-three-bottom sm-margin-30px-bottom">
                                                                                         <i class="fa fa-quote-left text-magenta medium-icon margin-nine-bottom sm-margin-25px-bottom"></i>
-                                                                                        <p>LIVE THE INTERCONTINENTAL LIFE
-                                                                                        RUPOSHIBANGLA HOTELS & RESORTS</p>
+                                                                                        <p>Hearing Choices helps you find the perfect hearing solution for your lifestyle, hearing loss and budget</p>
                                                                                     </blockquote>
-                                                                                    <p class="text-small text-light-gray clear-both">Design tools : Photoshop, Illustrator, html, css, javascript</p>
+                                                                                    <p class="text-small text-light-gray clear-both">Design tools : Photoshop, Illustrator, html, css, javascript, Wordpress, WooCommerce</p>
                                                                                 </div>
                                                                                 <!-- ebd popup text -->
                                                                                 <!-- popup images -->
                                                                                 <div class="col-md-4 col-sm-6 col-xs-12 text-center padding-twelve-top md-padding-eight-top xs-padding-50px-tb">
-                                                                                    <p><img src="images/ruposhibangla-logo.png" alt=""></p>
+                                                                                    <p><img src="images/hearing_logo.png" alt=""></p>
                                                                                 </div>
                                                                                 <!-- end popup images -->
                                                                             </div>
