--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
                                                                 <figure>
                                                                     <div class="gallery-img"><a class="work-details-popup"><img src="images/gallery-5.jpg" alt=""></a></div>
                                                                     <figcaption>
-                                                                        <a class="work-details-popup"><h3 class="text-white">celebratinglifebd<span class="text-white display-block">Web and Branding</span></h3></a>
+                                                                        <a class="work-details-popup"><h3 class="text-white">gaa.design/<span class="text-white display-block">Web and Branding</span></h3></a>
                                                                     </figcaption>
                                                                 </figure>
                                                                 <!-- details popup -->
@@ -743,7 +743,7 @@
                                                                         <div class="container-fluid margin-four-bottom xs-margin-seven-bottom">
                                                                             <div class="row">
                                                                                 <div class="col-md-8 col-sm-8 col-xs-12 popup-title col-md-offset-4 col-sm-offset-4 xs-text-center no-padding xs-padding-lr-15px">
-                                                                                    <h3 class="text-uppercase margin-three-bottom">celebratinglifebd</h3>
+                                                                                    <h3 class="text-uppercase margin-three-bottom">gaa.design/</h3>
                                                                                     <div class="text-light-gray date"><span class="small-line bg-magenta"></span>Web and Branding</div>
                                                                                 </div>
                                                                             </div>
@@ -759,12 +759,12 @@
                                                                                 <!-- popup text -->
                                                                                 <div class="col-md-4 col-sm-12 col-xs-12 padding-four-right padding-seven-left md-padding-three-lr padding-two-bottom sm-no-padding-bottom">
                                                                                     <h4 class="margin-seven-bottom sm-margin-two-bottom">Description</h4>
-                                                                                    <p class="text-light-gray  margin-eight-bottom sm-margin-five-bottom xs-margin-ten-bottom">Celebrating Life” is a composite competition, inviting films, photographs and lyrics entries that showcase various aspects of life in Bangladesh. Organized jointly by The Daily Star and Standard Chartered Bank, this initiative is our attempt to provide participants with a massive platform for creative expression.</p>
+                                                                                    <p class="text-light-gray  margin-eight-bottom sm-margin-five-bottom xs-margin-ten-bottom">GAA Design was founded in 2008 in Nottingham, UK, by Sundeep Singh Bhavra. Over the years, the company has achieved numerous significant milestones, including securing consent for several noteworthy buildings in London and the surrounding counties.</p>
                                                                                     <table class="popup-table">
                                                                                         <tbody>
                                                                                             <tr>
                                                                                                 <td>Date:</td>
-                                                                                                <td class="font-weight-400">January 14th, 2014</td>
+                                                                                                <td class="font-weight-400">January 14th, 2023</td>
                                                                                             </tr>
                                                                                             <tr>
                                                                                                 <td>Technology:</td>
@@ -772,11 +772,11 @@
                                                                                             </tr>
                                                                                             <tr>
                                                                                                 <td>Industry:</td>
-                                                                                                <td class="font-weight-400">Media</td>
+                                                                                                <td class="font-weight-400">Architectural</td>
                                                                                             </tr>
                                                                                         </tbody>
                                                                                     </table>
-                                                                                    <a href="http://www.celebratinglifebd.com/" target="_blank" class="btn small-btn highlight-button-magenta margin-nine-top sm-margin-four-top">celebratinglifebd.com<i class="fa fa-long-arrow-right text-white"></i></a>
+                                                                                    <a href="https://gaa.design/" target="_blank" class="btn small-btn highlight-button-magenta margin-nine-top sm-margin-four-top">gaa.design/<i class="fa fa-long-arrow-right text-white"></i></a>
                                                                                 </div>
                                                                                 <!-- end popup text -->
                                                                             </div>
