--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
                                                                 <figure>
                                                                     <div class="gallery-img"><a class="work-details-popup"><img src="images/gallery-5.jpg" alt=""></a></div>
                                                                     <figcaption>
-                                                                        <a class="work-details-popup"><h3 class="text-white">gaa.design/<span class="text-white display-block">Web and Branding</span></h3></a>
+                                                                        <a class="work-details-popup"><h3 class="text-white">gaa design<span class="text-white display-block">Web and Branding</span></h3></a>
                                                                     </figcaption>
                                                                 </figure>
                                                                 <!-- details popup -->
@@ -743,7 +743,7 @@
                                                                         <div class="container-fluid margin-four-bottom xs-margin-seven-bottom">
                                                                             <div class="row">
                                                                                 <div class="col-md-8 col-sm-8 col-xs-12 popup-title col-md-offset-4 col-sm-offset-4 xs-text-center no-padding xs-padding-lr-15px">
-                                                                                    <h3 class="text-uppercase margin-three-bottom">gaa.design/</h3>
+                                                                                    <h3 class="text-uppercase margin-three-bottom">gaa design</h3>
                                                                                     <div class="text-light-gray date"><span class="small-line bg-magenta"></span>Web and Branding</div>
                                                                                 </div>
                                                                             </div>
